Fixed some alignment

--- a/resources/public/css/dfa.css
+++ b/resources/public/css/dfa.css
@@ -13,7 +13,18 @@ textarea {
 }
 
 #mygraph {
-    width: 70%;
+    width: 66%;
     margin-left: auto;
     margin-right: auto
+}
+
+#input-instructions {
+    font-size: 12px;
+    font-weight: normal;
+    font-style: italic;
+}
+
+#submit {
+    position: absolute;
+    left: 0px;
 }
